--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -65,6 +66,7 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+doc/build/
 
 # PyBuilder
 target/
@@ -94,6 +96,17 @@ venv.bak/
 .spyderproject
 .spyproject
 
+# dotenv
+.env
+
+# virtualenv
+.venv
+venv/
+ENV/
+
+# Spyder project settings
+.spyderproject
+
 # Rope project settings
 .ropeproject
 
@@ -102,3 +115,20 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Added
+unused/
+vv
+.DS_Store
+pyvenv.cfg
+.vscode/
+
+#Custom excluded files
+real_sociedad_kickoff/
+.idea/
+qlik_screenshots/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
